--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>colocando em prática</title>
+  <title>aprendi rápido</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -71,7 +71,7 @@
     const botaoNao = document.getElementById("nao");
 
     botaoSim.addEventListener("click", () => {
-      alert("eu sei, aprendi direitin 💅🏻");
+      alert("eu sei, aprendi direitin(ctrl-C/Ctrl-V)💅🏻");
     });
 
     botaoNao.addEventListener("mouseover", () => {
