--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     const botaoNao = document.getElementById("nao");
 
     botaoSim.addEventListener("click", () => {
-      alert("eu sei, aprendi direitin(ctrl-C/Ctrl-V)💅🏻");
+      alert("eu sei, aprendi direitin(Ctrl-C/Ctrl-V)💅🏻");
     });
 
     botaoNao.addEventListener("mouseover", () => {
